[gd_scene load_steps=2 format=3 uid="uid://cqgf7v8w2xk3e"]

[ext_resource type="Script" path="res://scripts/ui/fishing_ui.gd" id="1_fishing_ui"]

[node name="FishingUI" type="CanvasLayer"]
script = ExtResource("1_fishing_ui")

[node name="FishingPanel" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="FishingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="FishingPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Status"
horizontal_alignment = 1

[node name="ActionLabel" type="Label" parent="FishingPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Action"
horizontal_alignment = 1

[node name="CatchButton" type="Button" parent="FishingPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "CATCH!"
